--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
   </head>
 
   <body>
-    <div id="main"></div>
+    <div id="main">
+      <canvas id="screen" height="700px" width="700px"></canvas>
+    </div>
   </body>
 
 </html>
