Add moving up and down functionality

--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 
   <body>
     <div id="main">
-      <canvas id="screen" height="700px" width="700px"></canvas>
+      <center>
+        <canvas id="screen" height="700px" width="700px"></canvas>
+      </center>
     </div>
   </body>
 
