Add speed to player, Add random speed for competitors, Add gamespeed

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 
   <body>
     <div id="main">
-      <center>
         <canvas id="screen" height="700px" width="700px"></canvas>
-      </center>
+
+        <canvas id="stats"></canvas>
     </div>
   </body>
 
