add new stats canvas, Add updateStats function, Add speed parameter

--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
 
   <body>
     <div id="main">
-        <canvas id="screen" height="700px" width="700px"></canvas>
+      <canvas id="stats" height="700px" width="230px"></canvas>
 
-        <canvas id="stats"></canvas>
+      <canvas id="screen" height="700px" width="500px"></canvas>
+
+      <!-- <canvas id="links"></canvas> -->
     </div>
   </body>
 
