add supportBar canvas, Add music

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
       <canvas id="screen" height="700px" width="500px"></canvas>
 
-      <!-- <canvas id="links"></canvas> -->
+      <canvas id="supportBar" height="700px" width="230px"></canvas>
     </div>
   </body>
 
