--- a/index.html
+++ b/index.html
@@ -18,7 +18,13 @@
 
       <canvas id="screen" height="700px" width="500px"></canvas>
 
-      <canvas id="supportBar" height="700px" width="230px"></canvas>
+      <canvas id="support-bar" height="700px" width="230px"></canvas>
+
+      <div class="music">
+        <button id="playMusic">Play Music</button>
+        <button id="stopMusic">Pause Music</button>
+      </div>
+
     </div>
   </body>
 
