Done with background

--- a/index.html
+++ b/index.html
@@ -10,15 +10,18 @@
     <script src="./dist/main.js"></script>
     
     <title>Torque</title>
+    <link rel="icon" type="image/x-icon" href="./resources/x-icon.jpg">
   </head>
 
   <body>
     <div id="main">
       <canvas id="stats" height="700px" width="230px"></canvas>
 
+      <canvas id="leftBackgroundPiece"></canvas>
       <canvas id="screen" height="700px" width="500px"></canvas>
+      <canvas id="rightBackgroundPiece"></canvas>
 
-      <canvas id="support-bar" height="700px" width="230px"></canvas>
+      <canvas id="support-bar" height="700px" width="185px"></canvas>
 
       <div class="music">
         <button id="playMusic">Play Music</button>
