Add restart feature, add end game message

--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
         <button id="stopMusic">Pause Music</button>
       </div>
 
-      <div id="finalScore" style="display: none;"></div>
+      <div id="finalMessage" style="display: none;">
+        <button id="restartGame">Play again!</button>
+      </div>
 
     </div>
   </body>
