Done with crashing mechanic, Add minor changes to balance, Fix bug with destroyed cars

--- a/index.html
+++ b/index.html
@@ -29,7 +29,13 @@
 
           <div id="instructions">
             <img id="arrows" src="/resources/arrows.png">
-            <p>1. Use arrows to move your car.<br>2. Hitting other cars will remove your lives</p>
+              <p>
+                1. Use arrows to move your car
+                <br>
+                2. Hitting other cars will remove your lives
+                <br>
+                3. Game speed increasing with time
+              </p>
           </div>
 
           <!-- <h3>
