Add Hit points to stats bar

--- a/index.html
+++ b/index.html
@@ -23,19 +23,18 @@
 
       <div id="greetings">
         <h2><center>Welcome!</center></h2>
-          <h3>
-            Get ready to hit the gas, feel the wind in your hair, and leave your opponents in the dust as you race to victory.
-          </h3>
 
           <div id="instructions">
             <img id="arrows" src="/resources/arrows.png">
-              <p>
+              <h3>
                 1. Use arrows to move your car
                 <br>
                 2. Hitting other cars will remove your lives
                 <br>
                 3. Game speed increasing with time
-              </p>
+                <br>
+                4. Hit points displeyed on the left bar
+              </h3>
           </div>
 
           <!-- <h3>
