Add speedometer, add odometer

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <br>
                 3. Game speed increasing with time
                 <br>
-                4. Hit points displeyed on the left bar
+                4. Hit points displayed on the left bar
               </h3>
           </div>
 
