Change style files distribution, Change game styles, Add 13" optimization

--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
                 3. Game speed increasing with time
                 <br>
                 4. Hit points displayed on the left bar
+                <br>
+                5. Your car is Invincible after competitor hit for 3 seconds
               </h3>
           </div>
 
@@ -45,13 +47,13 @@
 
       <canvas id="stats" height="700px" width="230px"></canvas>
 
-      <canvas id="leftBackgroundPiece"></canvas>
+      <canvas id="leftBackgroundPiece" height="700px" width="250px"></canvas>
       <canvas id="screen" height="700px" width="500px"></canvas>
-      <canvas id="rightBackgroundPiece"></canvas>
+      <canvas id="rightBackgroundPiece" height="700px" width="250px"></canvas>
 
       <!-- <canvas id="support-bar" height="700px" width="185px"></canvas> -->
 
-      <div class="music">
+      <div id="helperBar">
         <button id="playMusic">Play Music</button>
         <button id="stopMusic">Pause Music</button>
       </div>
