--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <h2><center>Welcome!</center></h2>
 
           <div id="instructions">
-            <img id="arrows" src="/resources/arrows.png">
+            <img id="arrows" src="resources/arrows.png">
               <h3>
                 1. Use arrows to move your car
                 <br>
@@ -33,15 +33,12 @@
                 <br>
                 3. Game speed increasing with time
                 <br>
-                4. Hit points displayed on the left bar
+                4. Lifes displayed on the left bar
                 <br>
                 5. Your car is Invincible after competitor hit for 3 seconds
               </h3>
           </div>
 
-          <!-- <h3>
-            Are you ready to take on the challenge?
-          </h3> -->
         <button id="startGame">Gas!</button>
       </div>
 
@@ -51,11 +48,16 @@
       <canvas id="screen" height="700px" width="500px"></canvas>
       <canvas id="rightBackgroundPiece" height="700px" width="250px"></canvas>
 
-      <!-- <canvas id="support-bar" height="700px" width="185px"></canvas> -->
-
       <div id="helperBar">
-        <button id="playMusic">Play Music</button>
-        <button id="stopMusic">Pause Music</button>
+        <div id="musicWrap">
+          <button id="playMusic">Play Music</button>
+          <button id="stopMusic">Pause Music</button>
+        </div>
+
+        <div id="linksWrap">
+          <button id="linkedin"></button>
+          <button id="github"></button>
+        </div>
       </div>
 
       <div id="finalMessage" style="display: none;">
