Add style to play and pause music buttons

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
 
       <div id="helperBar">
         <div id="musicWrap">
-          <button id="playMusic">Play Music</button>
-          <button id="stopMusic">Pause Music</button>
+          <button id="playMusic"></button>
+          <button id="pauseMusic"></button>
         </div>
 
         <div id="linksWrap">
