Complete coin feature

--- a/index.html
+++ b/index.html
@@ -27,15 +27,17 @@
           <div id="instructions">
             <img id="arrows" src="resources/arrows.png">
               <h3>
-                1. Use arrows to move your car
+                1. Navigate your car using arrow keys to move in different directions.
                 <br>
-                2. Hitting other cars will remove your lives
+                2. Colliding with other cars will deduct your lives.
                 <br>
-                3. Game speed increasing with time
+                3. The game speed gradually increases as you progress.
                 <br>
-                4. Lifes displayed on the left bar
+                4. Your remaining lives are displayed on the left side of the screen.
                 <br>
-                5. Your car is Invincible after competitor hit for 3 seconds
+                5. After your car is hit by a competitor, it becomes invincible for a duration of 3 seconds.
+                <br>
+                6. Collect coins to improve your score.
               </h3>
           </div>
 
