--- a/index.html
+++ b/index.html
@@ -40,9 +40,8 @@
                 4. Your remaining lives are displayed on the left side of the screen.
                 <br>
                 <img class="introImg" src="resources/intro_img/crash.png">
-                5. Colliding with other cars will deduct your lives.
-                <br>
-                After your car is hit by a competitor, it becomes invincible for a duration of 3 seconds.
+                5. Colliding with other cars will deduct your lives. However, if your car is hit by a competitor, 
+                it will become invincible for a duration of 3 seconds.
               </h3>
           </div>
 
