Change modal style

--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
                 <img class="introImg" src="resources/intro_img/coin.png">
                 2. Collect coins to improve your score.
                 <br>
-                <img class="introImg" src="resources/intro_img/speed.png">
+                <img class="introImg" src="resources/intro_img/speed2.png">
                 3. The game speed gradually increases as you progress.
                 <br>
-                <img class="introImg" src="resources/intro_img/hp.png">
+                <img class="introImg" src="resources/intro_img/hp2.png">
                 4. Your remaining lives are displayed on the left side of the screen.
                 <br>
-                <img class="introImg" src="resources/intro_img/crash.png">
+                <img class="introImg" src="resources/intro_img/crash2.png">
                 5. Colliding with other cars will deduct your lives. However, if your car is hit by a competitor, 
                 it will become invincible for a duration of 3 seconds.
               </h3>
