--- a/index.html
+++ b/index.html
@@ -40,8 +40,7 @@
                 4. Your remaining lives are displayed on the left side of the screen.
                 <br>
                 <img class="introImg" src="resources/intro_img/crash2.png">
-                5. Colliding with other cars will deduct your lives. However, if your car is hit by a competitor, 
-                it will become invincible for a duration of 3 seconds.
+                5. Colliding with other cars will deduct your lives, and make your car invincible for 3 seconds.
               </h3>
           </div>
 
@@ -61,6 +60,7 @@
         </div>
 
         <div id="linksWrap">
+          <button id="wellfound"></button>
           <button id="linkedin"></button>
           <button id="github"></button>
         </div>
