Add portfolio button, improve  game instructions

--- a/index.html
+++ b/index.html
@@ -28,19 +28,19 @@
             
               <h3>
                 <img class="introImg" src="resources/intro_img/arrows.png">
-                1. Navigate your car using arrow keys to move in different directions.
+                &nbsp;1. Navigate your car using arrow keys to move in different directions.
                 <br>
                 <img class="introImg" src="resources/intro_img/coin.png">
-                2. Collect coins to improve your score.
+                &nbsp;2. Collect coins to improve your score.
                 <br>
                 <img class="introImg" src="resources/intro_img/speed2.png">
-                3. The game speed gradually increases as you progress.
+                &nbsp;3. The game speed gradually increases as you progress.
                 <br>
                 <img class="introImg" src="resources/intro_img/hp2.png">
                 4. Your remaining lives are displayed on the left side of the screen.
                 <br>
-                <img class="introImg" src="resources/intro_img/crash2.png">
-                5. Colliding with other cars will deduct your lives, and make your car invincible for 3 seconds.
+                <img class="introImg" id="car-img" src="resources/intro_img/crash2.png">
+                &nbsp;5. Colliding with other cars will deduct your lives, and make your car invincible for 3 seconds.
               </h3>
           </div>
 
@@ -60,9 +60,10 @@
         </div>
 
         <div id="linksWrap">
-          <button id="wellfound"></button>
-          <button id="linkedin"></button>
+          <button id="portfolio"></button>
           <button id="github"></button>
+          <button id="linkedin"></button>
+          <button id="wellfound"></button>
         </div>
       </div>
 
